# cosmos-query-tool

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: README.md  build_binary.sh  install.sh
src/cosmos_query/: __init__.py  cli.py
