[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-query-cli"
version = "1.0.0"
description = "A CLI tool for querying Azure Cosmos DB"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["azure-cosmos>=4.0.0"]

[project.optional-dependencies]
dev = ["black>=22.0", "flake8>=4.0", "mypy>=0.950"]

[project.scripts]
cosmos-query = "cosmos_query.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/cosmos-query-cli"
Repository = "https://github.com/yourusername/cosmos-query-cli.git"
Issues = "https://github.com/yourusername/cosmos-query-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cosmos_query*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
